--- a/aws-android-sdk-appsync-tests/build.gradle
+++ b/aws-android-sdk-appsync-tests/build.gradle
@@ -21,7 +21,7 @@ android {
     compileSdkVersion 28
 
     defaultConfig {
-        minSdkVersion 15
+        minSdkVersion 18
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -49,6 +49,7 @@ repositories {
 
 dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
     androidTestImplementation 'junit:junit:4.13'
     androidTestImplementation "com.amazonaws:aws-android-sdk-s3:$aws_version"
     androidTestImplementation "com.amazonaws:aws-android-sdk-appsync:$VERSION_NAME"
