--- a/.travis.yml
+++ b/.travis.yml
@@ -5,21 +5,18 @@ before_install:
 - chmod +x gradlew
 - yes | sdkmanager "platforms;android-27"
 - android list target
-- echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+- echo no | avdmanager create avd -n test -k "system-images;android-28;google_apis;x86_64"
 - emulator -avd test -no-skin -no-audio -no-window &
 - android-wait-for-emulator
-- adb -e logcat *:W | tee logcat.log > /dev/null 2>&1 &
+- adb -e logcat *:I | tee logcat.log > /dev/null 2>&1 &
 - adb shell input keyevent 82 &
 language: android
 android:
   components:
   - tools
   - platform-tools
-  - tools
   - build-tools-28.0.2
   - android-28
-  - android-22
-  - sys-img-armeabi-v7a-android-22
 script:
 - ./gradlew publishToMavenLocal
 - cd aws-android-sdk-appsync-tests
